--- a/index.html
+++ b/index.html
@@ -64,10 +64,55 @@
       <button type="submit">Join Now</button>
     </form>
   </section>
-  
+  <section>
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Frontline Health</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+  <!-- Navigation -->
+  <header>
+    <nav class="navbar">
+      <div class="logo">Frontline Health</div>
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-content">
+      <h1>Your Health, Our Priority</h1>
+      <p>Empowering communities with accessible frontline healthcare solutions.</p>
+      <a href="services.html" class="btn">Explore Services</a>
+    </div>
+  </section>
+
+
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Frontline Health. All rights reserved.</p>
+    <div class="footer-links">
+      <a href="https://whtasapp .me/ +254798956596"
+      target="_blank">whatsapp</a> |
+      <a 
+      href="mailto:frontlinehealth001@gmail.com">Email us</a> |
+      <a
+      href="https://facebook.com/frontlinehealth"
+      target="_blank">Facebook</a>
+    </div>
   </footer>
+
 </body>
 </html>
+
+
